see if that fixes overflow

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -304,6 +304,7 @@ section.stats
 
   .stat-container
     @include pie-clearfix
+    max-width: 100%
     width: 340px
     margin: 3.5rem auto 0
     text-align: left
